--- a/src/main/webapp/cms/DataSeries/DataSeriesAdd.xhtml
+++ b/src/main/webapp/cms/DataSeries/DataSeriesAdd.xhtml
@@ -26,7 +26,7 @@
                 <p:fileUpload id="datacsv" required="true" styleClass="black-button" 
                               allowTypes="/(\.|\/)(csv)$/" mode="advanced" multiple="true"  
                               fileLimit="100" label="Data" update="growl" sizeLimit="5800000"
-                              fileUploadListener="#{dataSeriesAdd.handleFileUpload}"/>
+                              listener="#{dataSeriesAdd.handleFileUpload}"/>
                 
  
                 <p:growl id="messages" showDetail="true" /> 
